# claupenscope

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
notebooks/: openscope_pp_comparison.ipynb  openscope_pp_demo.ipynb
results/: ephys_ori_stats.csv  meso_ori_stats.csv  mi_stats_summary.csv  oddball_mi_all.csv  slap2_ori_stats.csv
scripts/: collect_ephys_ori_stats.py  collect_meso_ori_stats.py  collect_slap2_ori_stats.py  diagnose_rf_ecephys.py  oddball_by_paradigm_ecephys.py  oddball_by_paradigm_meso.py  oddball_by_paradigm_slap2.py  oddball_by_type_ecephys.py  oddball_mi_comparison.py  orientation_tuning_ecephys.py  orientation_tuning_mesoscope.py  orientation_tuning_slap2.py  plot_ephys_ori_population.py  plot_meso_ori_population.py  plot_oddball_responses.py  plot_slap2_ori_population.py  rf_mapping_ecephys.py  rf_mapping_mesoscope.py  rf_mapping_slap2.py
src/openscope_pp/: __init__.py
src/openscope_pp/analysis/: __init__.py  csd.py  oddball.py  orientation.py  rf_mapping.py
src/openscope_pp/loaders/: __init__.py  behavior.py  responses.py  streaming.py  trials.py
tests/: smoke_ecephys.py  smoke_mesoscope.py  smoke_slap2.py
