[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openscope-pp"
version = "0.1.0"
description = "Analysis toolkit for the OpenScope Community Predictive Processing project"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "numpy>=1.22",
    "pandas>=1.5",
    "h5py>=3.7",
    "pynwb>=2.5",
    "remfile>=0.1",
    "requests>=2.28",
    "matplotlib>=3.5",
    "xarray>=2022.6",
    "scipy>=1.9",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[tool.setuptools.packages.find]
where = ["src"]
